# crabaccess

./: Cargo.toml  LICENSE  README.md
src/: cli.rs  domain.rs  lib.rs  main.rs  parser.rs  storage.rs  tui.rs
src/tui/: dimension.rs  mod.rs  trend.rs
