[package]
name = "crabaccess"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
crossterm = "0.29"
indicatif = "0.18"
memmap2 = "0.9"
ratatui = "0.30"
rayon = "1.10"
regex = "1.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
csv = "1.3"
